Fix header blur on safari

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ img, br
     user-select: none;
     background: rgba(var(--light), .7);
     backdrop-filter: blur(2rem);
+    -webkit-backdrop-filter: blur(2rem);
     position: fixed;
     top: 0;
     left: 0;
